--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/cywang117/aoc21#readme",
   "devDependencies": {
+    "@types/node": "^17.0.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   }
